solution/duc/language/src/test/resources/error/InvalidAssignmentInWhileCond.duc
function cDouble(x) {
  return 2 * x;
}

function main() {
  while (cDouble(2) = 4) {
    42;
  }
}